# Virro-master

./: .env.example  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: security-foundation.yml
app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
app/[module]/: page.tsx
app/ai-understanding/: page.tsx
app/app/: layout.tsx  page.tsx
app/change-integrity/: page.tsx
app/demo/: page.tsx
app/design-delivery/: page.tsx
app/enterprise/: page.tsx
app/faq/: page.tsx
app/flow-audit/: page.tsx
app/how-it-works/: page.tsx
app/inbox/: page.tsx
app/jira-readiness/: page.tsx
app/legal/: page.tsx
app/operational-handoff/: page.tsx
app/privacy/: page.tsx
app/product-delivery/: page.tsx
app/security/: page.tsx
app/workflow-discovery/: page.tsx
components/dashboard/: dashboard.tsx
components/evidence/: evidence-section.tsx  (+3 more)
docs/: current-state-audit.md  public-claims-and-limitations.md  refinement-plan.md
prisma/: schema.prisma
public/: theme-init.js
virro-core/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
virro-core/alembic/: env.py  script.py.mako
virro-core/alembic/versions/: 0001_safe_signal_schema.py  0002_enforce_no_raw_storage.py  0003_tenant_idempotency.py
virro-core/app/: __init__.py  config.py  database.py  engine.py  future_adapters.py  lifecycle.py  main.py  models.py  privacy.py  schemas.py  security.py
virro-core/app/tests/: conftest.py  test_api.py
(+154 files in other folders)
