[project]
name = "virro-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.34,<1", "sqlalchemy>=2.0,<3", "psycopg[binary]>=3.2,<4", "pydantic-settings>=2.7,<3", "alembic>=1.14,<2"]

[project.optional-dependencies]
test = ["pytest>=8.3,<10", "httpx>=0.28,<1"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"
